--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.9",
     "vue-i18n": "^8.17.4",
+    "vue-password-strength-meter": "^1.7.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.2",
     "vue-svg-component-runtime": "^1.0.1",
     "vuex": "^3.1.1",
-    "wangeditor": "^3.1.1"
+    "wangeditor": "^4.6.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.2.1",
