--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ant-design-vue": "^1.6.2",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "echarts": "^5.0.0",
     "enquire.js": "^2.1.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -29,6 +30,7 @@
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.9",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-i18n": "^8.17.4",
     "vue-password-strength-meter": "^1.7.2",
     "vue-quill-editor": "^3.0.6",
