--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
 VUE_APP_API_BASE_URL=http://127.0.0.1
+VUE_APP_VERSION=0.6.0
+# 代码生成 - 前端项目路径
+VUE_APP_FRONT_END_PATH=/Users/tengchong/workspaces/webStorm/vue/Easy-RESTful-UI
