--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
+# 后端服务访问地址
 VUE_APP_API_BASE_URL=http://127.0.0.1
-VUE_APP_VERSION=0.7.0
-# 代码生成 - 前端项目路径
+VUE_APP_VERSION=0.8.0
+# 代码生成 - 前端项目路径（填写前端项目所在磁盘路径）
 VUE_APP_FRONT_END_PATH=/Users/tengchong/workspaces/webStorm/vue/Easy-RESTful-UI
