--- a/.env.preview
+++ b/.env.preview
@@ -1,4 +1,5 @@
 NODE_ENV=production
 VUE_APP_PREVIEW=true
+# 后端服务访问地址
 VUE_APP_API_BASE_URL=http://rest-api.easy-frame.top
-VUE_APP_VERSION=0.7.0
+VUE_APP_VERSION=0.8.0
